# SPB

./: .gitignore  README.md
tg-bot/: main.py  requirements.txt
tg-bot/handlers/: right_hand.py
tg-bot/keyboards/: inline_button.py  menu.py
web/: pyproject.toml  requir.txt
web/atomic_web/: manage.py
web/atomic_web/atomic_web/: asgi.py  settings.py  urls.py  wsgi.py
web/atomic_web/myapp/: views.py
web/atomic_web/processing/: preprocessing_data.py
web/atomic_web/staticfiles/: styles.css
web/notebook/: logs.txt  requir.txt
web/notebook/media/training_set/: stats.csv
web/notebook/myapp/: views.py
web/notebook/myapp/result/: res.json
web/notebook/myapp/static/: script.js  styles.css
web/notebook/myapp/templates/: starting_screen.html  stat.html
web/notebook/notebook/: asgi.py  settings.py  urls.py
web/notebook/processing/: add_training.py  database.py  database.txt  run.py
web/notebook/processing/ml_utils/: dataloader.py  engine.py  eval.py  logger.py  metric_utils.py  model.py
