[tool.poetry]
name = "web"
version = "0.1.0"
description = ""
authors = ["Ogurche <337398@edu.itmo.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"
ultralytics = "^8.2.32"
cv = "^1.0.0"
opencv-python = "^4.10.0.82"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
